--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -11,21 +11,22 @@
         }
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
-            border: 5px solid red;
+            border: 5px solid black;
             border-radius: 30px;
         }
 
         td {
             padding: 8px;
             border: 1px solid black;
+            text-align: center;
+            vertical-align: middle;
         }
 
-        #linha {
-            background-color: gray;
-            color: white;
-            font-weight: bold;
-        }
+       .numero {
+        text-align: right;
+       }
 
     </style>
 </head>
@@ -40,12 +41,12 @@
         <tr>
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr>
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr>
             <td>A4</td>
