--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -10,6 +10,10 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        tbody > tr:nth-child(2n) {
+            background-color: rgb(196, 195, 195);
+        }
+
         table {
             width: 500px;
             height: 20px;
