--- a/desafios/desafio011/index.html
+++ b/desafios/desafio011/index.html
@@ -9,14 +9,14 @@
 <body>
     <table>
         <thead>
-            <th>Área</th>
-            <th>Disciplinas</th>
-            <th>Notas</th>
-            <th>Média</th>
+            <th colspan="2">Área</th>
+            <th colspan="2">Disciplinas</th>
+            <th colspan="2">Notas</th>
+            <th colspan="2" >Média</th>
         </thead>
         <tbody>
             <tr>
-                <td>Exatas</td>
+                <th colspan="4">Exatas</th>
             </tr>
             <tr>
                 <td>Matemática</td>
@@ -43,11 +43,11 @@
                 <td>0,0</td>
             </tr>
             <tr>
-                <th>Médias exatas</th>
+                <th colspan="3">Médias exatas</th>
                 <td>0,0</td>
             </tr>
             <tr>
-                <th>Humanas</th>
+                <th colspan="4">Humanas</th>
             </tr>
             <tr>
                 <td>História</td>
@@ -62,7 +62,7 @@
                 <td>0,0</td>
             </tr>
             <tr>
-                <th>Médias humanas</th>
+                <th colspan="3">Médias humanas</th>
                 <td>0,0</td>
             </tr>
         </tbody>
