--- a/desafios/desafio011/index.html
+++ b/desafios/desafio011/index.html
@@ -9,10 +9,10 @@
 <body>
     <table>
         <thead>
-            <th colspan="2">Área</th>
-            <th colspan="2">Disciplinas</th>
-            <th colspan="2">Notas</th>
-            <th colspan="2" >Média</th>
+            <th>Área</th>
+            <th>Disciplinas</th>
+            <th>Notas</th>
+            <th>Média</th>
         </thead>
         <tbody>
             <tr>
@@ -43,7 +43,7 @@
                 <td>0,0</td>
             </tr>
             <tr>
-                <th colspan="3">Médias exatas</th>
+                <th colspan="3" id="exatas">Médias exatas</th>
                 <td>0,0</td>
             </tr>
             <tr>
