--- a/desafios/desafio012/index2.html
+++ b/desafios/desafio012/index2.html
@@ -8,9 +8,8 @@
          td, th {
             border: solid black 1px;
             border-collapse: collapse;
-            padding: 1px 40px;
+            padding: 1px 40px 1px 40px;
             text-align: center;
-            font-weight: bolder;
         }
     </style>
 </head>
