--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Testando o uso de Iframes</h1>
     <p>Lorem ipsum dolor sit amet consectetur a 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0">
-
-        </iframe>elit</a>. Voluptatibus veniam voluptatem odio maiores natus aliquam, reprehenderit omnis iusto vero earum corrupti ratione laborum ipsa dolor recusandae perferendis! Porro, voluptatibus voluptates?</p>
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" scrolling="no">
+            https://www.cursoemvideo.com
+        </iframe>elit. Voluptatibus veniam voluptatem odio maiores natus aliquam, reprehenderit omnis iusto vero earum corrupti ratione laborum ipsa dolor recusandae perferendis! Porro, voluptatibus voluptates?</p>
 </body>
 </html>
