atualizei o exercicio iframe002

--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -10,7 +10,8 @@
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores ea vel sed minima consectetur labore, aperiam libero quia. Atque iste possimus neque itaque tempora amet unde vel dolores id necessitatibus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, doloremque hic! Obcaecati nam, illum eos quas laboriosam, facilis, eligendi eveniet cumque culpa sed id tempora beatae nihil praesentium quae fuga.
     </p>
-    <iframe src="pagina001.html" frameborder="0" width="500" height="500"> 
+    <iframe src="paginas-extras/pagina001.html" frameborder="0" width="500" height="500"> 
+        <p>Infelizmente o seu navegador não atende a este recurso, sinto muito</p>
     </iframe>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad praesentium soluta assumenda vitae in, debitis eveniet quibusdam reiciendis nam doloribus aut odio provident non nobis. Quod vitae sit vero tenetur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla cupiditate doloremque ratione quasi, quis illum, dolorem accusamus aut ex temporibus blanditiis voluptates, laboriosam esse architecto beatae totam! Numquam, cumque nesciunt?
